Production/Production/src/objects/Post_Chat_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Advisor_Communication_Skills_Rating__c</fullName>
        <description>How satisfied were you that the advisor you communicated with clearly understood your needs</description>
        <label>Advisor Communication Skills Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advisor_Communication_Skills_SubResponse__c</fullName>
        <description>Sorry to hear that, could you please tell us the reasons for your score</description>
        <label>Advisor Communication Skills SubResponse</label>
        <picklist>
            <picklistValues>
                <fullName>Didn&apos;t understand me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response was too slow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t answer my questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t answer my chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Language was poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unprofessional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advisor_Knowledge_Rating__c</fullName>
        <description>How satisfied were you with the knowledge of the advisor who handled your call/contact</description>
        <label>Advisor Knowledge Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chat_Key__c</fullName>
        <description>Use for Matching to the Live Chat Transcript (Chat Request Time + _ + Chat Start Time)</description>
        <externalId>true</externalId>
        <label>Chat Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Resolution_Online__c</fullName>
        <description>Did you attempt to resolve your question Online</description>
        <label>Issue Resolution Online</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Live_Chat_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>Post Chat Surveys</relationshipLabel>
        <relationshipName>Post_Chat_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proactive_Handling_Rating__c</fullName>
        <description>Did you feel we proactively handled your contact</description>
        <label>Proactive Handling Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query_Resolved__c</fullName>
        <description>Was your query resolved on this occasion</description>
        <label>Query Resolved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendation_Rating__c</fullName>
        <label>Recommendation Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Satisfaction_Rating__c</fullName>
        <description>How satisfied were you with the service from our advisor</description>
        <label>Service Satisfaction Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Post Chat Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCS-{0000}</displayFormat>
        <label>Post Chat Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Chat Surveys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>